add text content

--- a/index2.html
+++ b/index2.html
@@ -148,11 +148,16 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="caption dig">
-                                        <h1 data-splitting="">Unique <div class="tline">brand Stories</div>
+                                        <!-- <h1 data-splitting="">Unique <div class="tline">brand Stories</div>
                                         </h1>
                                         <a href="#0" class="simple-btn mt-50">
                                             <span>Discover Works</span>
-                                        </a>                                
+                                        </a>    -->
+                                        <h1 data-splitting="">Creative <div class="tline">Marketing Strategies</div>
+                                        </h1>
+                                        <a href="#0" class="simple-btn mt-50">
+                                            <span>Explore Our Work</span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -165,11 +170,15 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="caption dig">
-                                        <h1 data-splitting="">Digital <div class="tline">Design Awards</div>
+                                        <!-- <h1 data-splitting="">Digital <div class="tline">Design Awards</div>
                                         </h1>
                                         <a href="#0" class="simple-btn mt-50">
                                             <span>Discover Works</span>
-                                        </a>
+                                        </a> -->
+
+                                        <h1 data-splitting="">Award-Winning <div class="tline">Campaign Results</div>
+                                        </h1>
+                                        <a href="#0" class="simple-btn mt-50"><span>Explore Our Work</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -182,11 +191,15 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="caption dig">
-                                        <h1 data-splitting="">Original <div class="tline">Solutions</div>
+                                        <!-- <h1 data-splitting="">Original <div class="tline">Solutions</div>
                                         </h1>
                                         <a href="#0" class="simple-btn mt-50">
                                             <span>Discover Works</span>
-                                        </a>
+                                        </a> -->
+
+                                        <h1 data-splitting="">Innovative <div class="tline">Digital Solutions</div>
+                                        </h1>
+                                        <a href="#0" class="simple-btn mt-50"><span>Explore Our Work</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -232,18 +245,16 @@
                             <span></span>
                             <span></span>
                         </div>
-                        <h2 class="extra-title wow" data-splitting="">We help to create strategies, design &
-                            development.
+                        <h2 class="extra-title wow" data-splitting="">We craft digital strategies that deliver impact.
                         </h2>
+
                     </div>
                 </div>
                 <div class="col-lg-5 valign">
                     <div class="full-width">
-                        <p class="wow txt" data-splitting="">We never underestimate any parts of each project
-                            as
-                            they're
-                            all essential to meeting the
-                            ultimate goal. you'll be engaged in with our positive and enthusiastic attitude.
+                        <p class="wow txt" data-splitting="">
+                            From startups to global brands, we help businesses build their digital presence with
+                            creative marketing, SEO, branding, and analytics.
                         </p>
                         <a href="#0" class="simple-btn custom-font mt-20 wow" data-splitting=""><span>Know
                                 More</span></a>
@@ -265,7 +276,7 @@
                 <div class="col-lg-3 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
                         <span class="icon pe-7s-monitor"></span>
-                        <h6>Website <br> Developments</h6>
+                        <h6>Website <br> Design & SEO</h6>
                         <div class="text-right">
                             <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
                         </div>
@@ -285,7 +296,7 @@
                 <div class="col-lg-3 offset-lg-1 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
                         <span class="icon pe-7s-phone"></span>
-                        <h6>Mobile App <br> Devlopment</h6>
+                        <h6>Mobile App <br> Marketing</h6>
                         <div class="text-right">
                             <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
                         </div>
@@ -297,7 +308,7 @@
                 <div class="col-lg-3 offset-lg-1 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
                         <span class="icon pe-7s-diskette"></span>
-                        <h6>Document <br> Legal Policy</h6>
+                        <h6>Legal & <br> Compliance Copy</h6>
                         <div class="text-right">
                             <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
                         </div>
@@ -307,7 +318,7 @@
                 <div class="col-lg-3 offset-lg-1 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
                         <span class="icon pe-7s-help2"></span>
-                        <h6>Managing <br> Community</h6>
+                        <h6>Community <br> Management</h6>
                         <div class="text-right">
                             <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
                         </div>
@@ -317,7 +328,7 @@
                 <div class="col-lg-3 offset-lg-1 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
                         <span class="icon pe-7s-arc"></span>
-                        <h6>Coustomer <br> Engagement</h6>
+                        <h6>Customer <br> Engagement Strategy</h6>
                         <div class="text-right">
                             <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
                         </div>
@@ -351,7 +362,8 @@
                             </div>
 
                             <div class="cont">
-                                <h3 class="wow" data-splitting="">So that's us. There's no other way to put it.</h3>
+                                <h3 class="wow" data-splitting="">We're more than marketers. We're your growth partners.
+                                </h3>
                             </div>
                         </div>
                     </div>
@@ -363,9 +375,9 @@
                             </div>
                             <div class="slic-item wow fadeInUp" data-wow-delay=".5s">
                                 <div class="item">
-                                    <p>Nulla metus metus ullamcorper vel tincidunt sed euismod nibh volutpat velit
-                                        class
-                                        aptent taciti sociosqu ad litora.</p>
+                                    <p>Working with [Company Name] has transformed our business. Their creative strategy
+                                        helped us scale our audience by 200% within three months.</p>
+
                                     <div class="info">
                                         <div class="img">
                                             <div class="img-box">
@@ -442,8 +454,8 @@
                                         <span class="custom-font">90%</span>
                                     </div>
                                     <div class="cont">
-                                        <span>Project</span>
-                                        <h6>Consulting</h6>
+                                        <span>Strategy</span>
+                                        <h6>Consulting & Campaigns</h6>
                                     </div>
                                 </div>
                             </div>
@@ -453,8 +465,8 @@
                                         <span class="custom-font">75%</span>
                                     </div>
                                     <div class="cont">
-                                        <span>App</span>
-                                        <h6>Development</h6>
+                                        <span>Marketing</span>
+                                        <h6>App Promotion</h6>
                                     </div>
                                 </div>
                             </div>
@@ -504,8 +516,8 @@
                             </a>
                         </div>
                         <div class="cont">
-                            <h6>Creativity Demand</h6>
-                            <span><a href="#0">Design</a>, <a href="#0">WordPress</a></span>
+                            <h6>ROI-Driven Campaign</h6>
+                            <span><a href="#0">Marketing</a>, <a href="#0">Analytics</a></span>
                         </div>
                     </div>
 
@@ -518,8 +530,8 @@
                             </a>
                         </div>
                         <div class="cont">
-                            <h6>Through The Breaking</h6>
-                            <span><a href="#0">Design</a>, <a href="#0">WordPress</a></span>
+                            <h6>Influencer Outreach</h6>
+                            <span><a href="#0">Social</a>, <a href="#0">Creative</a></span>
                         </div>
                     </div>
 
@@ -532,13 +544,13 @@
                             </a>
                         </div>
                         <div class="cont">
-                            <h6>Create With Creatives</h6>
-                            <span><a href="#0">Design</a>, <a href="#0">WordPress</a></span>
+                            <h6>SEO Growth Hack</h6>
+                            <span><a href="#0">SEO</a>, <a href="#0">Content</a></span>
                         </div>
                     </div>
 
                     <!-- gallery item -->
-                    <div class="col-lg-4 col-md-6 items graphic wow fadeInUp" data-wow-delay=".4s">
+                    <!-- <div class="col-lg-4 col-md-6 items graphic wow fadeInUp" data-wow-delay=".4s">
                         <div class="item-img">
                             <a href="project-details.html" class="imago wow">
                                 <img src="img/portfolio/mas/04.jpg" alt="image">
@@ -546,13 +558,13 @@
                             </a>
                         </div>
                         <div class="cont">
-                            <h6>Energies of Love</h6>
-                            <span><a href="#0">Design</a>, <a href="#0">WordPress</a></span>
+                            <h6>Brand Identity Design</h6>
+                            <span><a href="#0">Branding</a>, <a href="#0">Visuals</a></span>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- gallery item -->
-                    <div class="col-lg-4 col-md-6 items web wow fadeInUp" data-wow-delay=".4s">
+                    <!-- <div class="col-lg-4 col-md-6 items web wow fadeInUp" data-wow-delay=".4s">
                         <div class="item-img">
                             <a href="project-details.html" class="imago wow">
                                 <img src="img/portfolio/mas/05.jpg" alt="image">
@@ -563,10 +575,10 @@
                             <h6>See It Yourself</h6>
                             <span><a href="#0">Design</a>, <a href="#0">WordPress</a></span>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- gallery item -->
-                    <div class="col-lg-4 col-md-6 items brand wow fadeInUp" data-wow-delay=".4s">
+                    <!-- <div class="col-lg-4 col-md-6 items brand wow fadeInUp" data-wow-delay=".4s">
                         <div class="item-img">
                             <a href="project-details.html" class="imago wow">
                                 <img src="img/portfolio/mas/06.jpg" alt="image">
@@ -577,7 +589,7 @@
                             <h6>Blast From The Past</h6>
                             <span><a href="#0">Design</a>, <a href="#0">WordPress</a></span>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
 
@@ -688,7 +700,7 @@
                 <div class="col-md-8 col-lg-9">
                     <div class="content sm-mb30">
                         <h6 class="wow" data-splitting="">Let’s Talk</h6>
-                        <h2 class="wow custom-font" data-splitting="">about your <b>next project</b>.</h2>
+                        <h2 class="wow custom-font" data-splitting="">about your <b>marketing goals</b>.</h2>
                     </div>
                 </div>
 
