--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="">
 
     <!-- Title  -->
-    <title>Avo</title>
+    <title>Digit</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico">
@@ -23,6 +23,7 @@
     <link href="../../../css-1?family=Playfair+Display:400,500,600,700,800,900&display=swap" rel="stylesheet">
     <link href="../../../css2-1?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="../../../css2-2?family=Barlow+Condensed:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+
 
     <!-- Plugins -->
     <link rel="stylesheet" href="css/plugins.css">
@@ -71,7 +72,7 @@
 
             <!-- Logo -->
             <a class="logo" href="#">
-                <img src="img/logo-light.png" alt="logo">
+                <img src="img/logo-dark.png" alt="logo">
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -82,42 +83,24 @@
             <!-- navbar links -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="true" aria-expanded="false">Home</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="index.html">Main Home</a>
-                            <a class="dropdown-item" href="index2.html">Creative Studio</a>
-                            <a class="dropdown-item" href="index3.html">Business Startup</a>
-                            <a class="dropdown-item" href="index4.html">One Page</a>
-                            <a class="dropdown-item" href="index5.html">Freelancer</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="true" aria-expanded="false">Showcases</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="showcase.html">Full Screen</a>
-                            <a class="dropdown-item" href="showcase2.html">Creative Carousel</a>
-                            <a class="dropdown-item" href="showcase3.html">Radius Carousel</a>
-                            <a class="dropdown-item" href="showcase4.html">Columns Carousel</a>
-                        </div>
-                    </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="#">Home</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="true" aria-expanded="false">Portfolio</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="works.html">Mouse Info</a>
-                            <a class="dropdown-item" href="works2.html">Masonry 3 Columns</a>
-                            <a class="dropdown-item" href="works3.html">Masonry 2 Columns</a>
-                            <a class="dropdown-item" href="works4.html">Pinterest List</a>
-                        </div>
-                    </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#services">Services</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#works">Showcases</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
                 <div class="search">
@@ -139,11 +122,11 @@
 
     <!-- ==================== Start Slider ==================== -->
 
-    <header class="slider slider-prlx">
+    <header id="#" class="slider slider-prlx">
         <div class="swiper-container parallax-slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/slid/01.jpg" data-overlay-dark="6">
+                    <div class="bg-img valign" data-background="img/digi3.png" data-overlay-dark="6">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-12">
@@ -165,7 +148,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/slid/03.jpg" data-overlay-dark="6">
+                    <div class="bg-img valign" data-background="img/digi5.png" data-overlay-dark="6">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-12">
@@ -186,7 +169,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/slid/02.jpg" data-overlay-dark="6">
+                    <div class="bg-img valign" data-background="img/digi4.png" data-overlay-dark="6">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-12">
@@ -234,7 +217,7 @@
 
     <!-- ==================== Start blc-sec ==================== -->
 
-    <section class="blc-sec section-padding pb-0">
+    <section id="about" class="blc-sec section-padding pb-0">
         <div class="container">
             <div class="row">
                 <div class="col-lg-7">
@@ -270,13 +253,15 @@
 
     <!-- ==================== Start Services ==================== -->
 
-    <section class="services section-padding">
+    <section id="services" class="services section-padding">
         <div class="container">
             <div class="row rone">
                 <div class="col-lg-3 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
-                        <span class="icon pe-7s-monitor"></span>
-                        <h6>Website <br> Design & SEO</h6>
+                        <!-- <span class="icon pe-7s-monitor"></span> -->
+                        <img class="png-image" src="./img/content.png" alt="">
+
+                        <h6>Content <br> Production & 3D</h6>
                         <div class="text-right">
                             <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
                         </div>
@@ -285,8 +270,9 @@
                 </div>
                 <div class="col-lg-3 offset-lg-1 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
-                        <span class="icon pe-7s-camera"></span>
-                        <h6>Product <br> Photography</h6>
+                        <img class="png-image" src="./img/instagram.png" alt="">
+
+                        <h6>Social <br> Media Management</h6>
                         <div class="text-right">
                             <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
                         </div>
@@ -295,8 +281,8 @@
                 </div>
                 <div class="col-lg-3 offset-lg-1 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
-                        <span class="icon pe-7s-phone"></span>
-                        <h6>Mobile App <br> Marketing</h6>
+                        <img class="png-image" src="./img/tiktok.png" alt="">
+                        <h6>Tiktok <br>Management</h6>
                         <div class="text-right">
                             <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
                         </div>
@@ -307,18 +293,9 @@
             <div class="row rtwo">
                 <div class="col-lg-3 offset-lg-1 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
-                        <span class="icon pe-7s-diskette"></span>
-                        <h6>Legal & <br> Compliance Copy</h6>
-                        <div class="text-right">
-                            <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
-                        </div>
-                        <div class="bg-color"></div>
-                    </div>
-                </div>
-                <div class="col-lg-3 offset-lg-1 wow fadeInUp" data-wow-delay=".4s">
-                    <div class="mas-item">
                         <span class="icon pe-7s-help2"></span>
-                        <h6>Community <br> Management</h6>
+                        <!-- <span class="icon pe-7s-diskette"></span> -->
+                        <h6>Branding & <br> Design</h6>
                         <div class="text-right">
                             <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
                         </div>
@@ -327,12 +304,25 @@
                 </div>
                 <div class="col-lg-3 offset-lg-1 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
-                        <span class="icon pe-7s-arc"></span>
-                        <h6>Customer <br> Engagement Strategy</h6>
+                        <span class="icon pe-7s-monitor"></span>
+
+                        <h6>Web & App <br> Desgin</h6>
                         <div class="text-right">
                             <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
                         </div>
                         <div class="bg-color"></div>
+                    </div>
+                </div>
+                <div class="col-lg-3 offset-lg-1 wow fadeInUp" data-wow-delay=".4s">
+                    <div class="mas-item">
+                        <!-- <span class="icon pe-7s-arc"></span> -->
+                        <span class="icon pe-7s-camera"></span>
+
+                        <h6>Celebrity & Influencer <br> Management/h6>
+                            <div class="text-right">
+                                <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
+                            </div>
+                            <div class="bg-color"></div>
                     </div>
                 </div>
             </div>
@@ -483,7 +473,7 @@
 
     <!-- ==================== Start works ==================== -->
 
-    <section class="portfolio section-padding pb-70">
+    <section id="works" class="portfolio section-padding pb-70">
         <div class="container">
             <div class="sec-head custom-font">
                 <h6>Portfolio</h6>
@@ -718,14 +708,14 @@
 
     <!-- ==================== Start Footer ==================== -->
 
-    <footer class="footer-half sub-bg section-padding pb-0">
+    <footer id="contact" class="footer-half footer-sub-bg section-padding pb-0">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5">
                     <div class="cont">
                         <div class="logo">
                             <a href="#0">
-                                <img src="img/logo-light.png" alt="">
+                                <img src="img/logo-dark.png" alt="">
                             </a>
                         </div>
                         <div class="con-info custom-font">
