--- a/index.html
+++ b/index.html
@@ -126,16 +126,33 @@
         <div class="swiper-container parallax-slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
+                    <div class="bg-img valign" data-overlay-dark="6">
+                        <video width="100%" autoplay muted loop class="video-bg">
+                            <source src="/img/boards.mp4" type="video/mp4" />
+                        </video>
+                        <!-- <img src="/img/bill-board.gif" alt=""> -->
+                        <!-- <div class="container">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="caption dig">
+                                        <h1 data-splitting="">Creative <div class="tline">Marketing Strategies</div>
+                                        </h1>
+                                        <a href="#0" class="simple-btn mt-50">
+                                            <span>Explore Our Work</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
+
+                <div class="swiper-slide">
                     <div class="bg-img valign" data-background="img/digi3.png" data-overlay-dark="6">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="caption dig">
-                                        <!-- <h1 data-splitting="">Unique <div class="tline">brand Stories</div>
-                                        </h1>
-                                        <a href="#0" class="simple-btn mt-50">
-                                            <span>Discover Works</span>
-                                        </a>    -->
                                         <h1 data-splitting="">Creative <div class="tline">Marketing Strategies</div>
                                         </h1>
                                         <a href="#0" class="simple-btn mt-50">
@@ -153,12 +170,6 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="caption dig">
-                                        <!-- <h1 data-splitting="">Digital <div class="tline">Design Awards</div>
-                                        </h1>
-                                        <a href="#0" class="simple-btn mt-50">
-                                            <span>Discover Works</span>
-                                        </a> -->
-
                                         <h1 data-splitting="">Award-Winning <div class="tline">Campaign Results</div>
                                         </h1>
                                         <a href="#0" class="simple-btn mt-50"><span>Explore Our Work</span></a>
@@ -174,12 +185,6 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="caption dig">
-                                        <!-- <h1 data-splitting="">Original <div class="tline">Solutions</div>
-                                        </h1>
-                                        <a href="#0" class="simple-btn mt-50">
-                                            <span>Discover Works</span>
-                                        </a> -->
-
                                         <h1 data-splitting="">Innovative <div class="tline">Digital Solutions</div>
                                         </h1>
                                         <a href="#0" class="simple-btn mt-50"><span>Explore Our Work</span></a>
