--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="swiper-slide">
                     <div class="bg-img valign" data-overlay-dark="6">
                         <video width="100%" autoplay muted loop class="video-bg">
-                            <source src="/img/boards.mp4" type="video/mp4" />
+                            <source src="/img/bussiness2.mp4" type="video/mp4" />
                         </video>
                         <!-- <img src="/img/bill-board.gif" alt=""> -->
                         <!-- <div class="container">
@@ -165,21 +165,6 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="bg-img valign" data-background="img/digi5.png" data-overlay-dark="6">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="caption dig">
-                                        <h1 data-splitting="">Award-Winning <div class="tline">Campaign Results</div>
-                                        </h1>
-                                        <a href="#0" class="simple-btn mt-50"><span>Explore Our Work</span></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide">
                     <div class="bg-img valign" data-background="img/digi4.png" data-overlay-dark="6">
                         <div class="container">
                             <div class="row">
@@ -194,6 +179,23 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="swiper-slide">
+                    <div class="bg-img valign" data-background="img/digi5.png" data-overlay-dark="6">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="caption dig">
+                                        <h1 data-splitting="">Award-Winning <div class="tline">Campaign Results</div>
+                                        </h1>
+                                        <a href="#0" class="simple-btn mt-50"><span>Explore Our Work</span></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
             <!-- slider setting -->
