--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <!-- ==================== Start Navbar ==================== -->
 
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg nav-scroll">
         <div class="container">
 
             <!-- Logo -->
@@ -105,7 +105,7 @@
                 </ul>
                 <div class="search">
                     <span class="icon pe-7s-search cursor-pointer"></span>
-                    <div class="search-form text-center custom-font">
+                    <div class="search-form text-center ">
                         <form>
                             <input type="text" name="search" placeholder="Search">
                         </form>
@@ -207,7 +207,7 @@
                     <i class="fas fa-chevron-left"></i>
                 </div>
             </div>
-            <div class="swiper-pagination top botm custom-font"></div>
+            <div class="swiper-pagination top botm "></div>
 
             <div class="social-icon">
                 <a href="#0"><i class="fab fa-facebook-f"></i></a>
@@ -243,10 +243,20 @@
                 <div class="col-lg-5 valign">
                     <div class="full-width">
                         <p class="wow txt" data-splitting="">
-                            From startups to global brands, we help businesses build their digital presence with
-                            creative marketing, SEO, branding, and analytics.
+                            Back in 2021, a few of us in our early 20’s, young, ambitious, and passionate about
+                            creating, Decided to stop waiting for the “right time” and just start. LA Creatives was born
+                            as our entry into concerts and event media production. We built our reputation through
+                            social media and word of mouth, earning trust by working with A list artists and some of the
+                            biggest names in the country. Shortly after, we launched The After Productions in our
+                            passion to capture the purest moments of love and transforming them into beautiful,
+                            cinematic stories that live on forever.. Over the years, we have explored multiple niches,
+                            from automotive and food to luxury resorts, events, lifestyle, and travel, constantly
+                            evolving, adapting, and honing our craft with every project. From long nights to packed
+                            shoot days, Everything led us here. Today, with The Creative Souq LLC, we proudly carry
+                            forward that legacy in the Middle East, driven by the same ambition we had in the beginning.
+                            And We’re only getting started.
                         </p>
-                        <a href="#0" class="simple-btn custom-font mt-20 wow" data-splitting=""><span>Know
+                        <a href="#0" class="simple-btn  mt-20 wow" data-splitting=""><span>Know
                                 More</span></a>
                     </div>
                 </div>
@@ -260,15 +270,15 @@
 
     <!-- ==================== Start Services ==================== -->
 
-    <section id="services" class="services section-padding">
+    <section id="services" class="services services-padding">
         <div class="container">
             <div class="row rone">
                 <div class="col-lg-3 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
-                        <!-- <span class="icon pe-7s-monitor"></span> -->
-                        <img class="png-image" src="./img/content.png" alt="">
+                        <span class="icon pe-7s-photo"></span>
+                        <!-- <img class="png-image" src="./img/content.png" alt=""> -->
 
-                        <h6>Content <br> Production & 3D</h6>
+                        <h6>Brand <br> Photography & Videography</h6>
                         <div class="text-right">
                             <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
                         </div>
@@ -279,7 +289,9 @@
                     <div class="mas-item">
                         <img class="png-image" src="./img/instagram.png" alt="">
 
-                        <h6>Social <br> Media Management</h6>
+                        <h6>Social Media
+                            <br>Content & Management
+                        </h6>
                         <div class="text-right">
                             <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
                         </div>
@@ -288,8 +300,12 @@
                 </div>
                 <div class="col-lg-3 offset-lg-1 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
-                        <img class="png-image" src="./img/tiktok.png" alt="">
-                        <h6>Tiktok <br>Management</h6>
+                        <!-- <img class="png-image" src="./img/tiktok.png" alt=""> -->
+                        <span class="icon pe-7s-film"></span>
+
+                        <h6>Reels &
+                            <br>Short-Form Content
+                        </h6>
                         <div class="text-right">
                             <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
                         </div>
@@ -300,9 +316,11 @@
             <div class="row rtwo">
                 <div class="col-lg-3 offset-lg-1 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
-                        <span class="icon pe-7s-help2"></span>
+                        <span class="icon pe-7s-box1"></span>
                         <!-- <span class="icon pe-7s-diskette"></span> -->
-                        <h6>Branding & <br> Design</h6>
+                        <h6>Food &
+                            <br>Beverage Media
+                        </h6>
                         <div class="text-right">
                             <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
                         </div>
@@ -311,9 +329,9 @@
                 </div>
                 <div class="col-lg-3 offset-lg-1 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
-                        <span class="icon pe-7s-monitor"></span>
+                        <span class="icon pe-7s-display1"></span>
 
-                        <h6>Web & App <br> Desgin</h6>
+                        <h6>Automotive <br> Visuals</h6>
                         <div class="text-right">
                             <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
                         </div>
@@ -325,16 +343,77 @@
                         <!-- <span class="icon pe-7s-arc"></span> -->
                         <span class="icon pe-7s-camera"></span>
 
-                        <h6>Celebrity & Influencer <br> Management/h6>
-                            <div class="text-right">
-                                <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
-                            </div>
-                            <div class="bg-color"></div>
+                        <h6>Wedding & <br> Event Coverage</h6>
+                        <div class="text-right">
+                            <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
+                        </div>
+                        <div class="bg-color"></div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- ==================== Start Services ==================== -->
+
+    <section class="services section-padding sub-bg">
+        <div class="container">
+            <div class="sec-head custom-font tr-head">
+                <h6>Best Features</h6>
+                <h3>Services.</h3>
+                <span class="tbg">Services</span>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 wow fadeInUp" data-wow-delay=".3s">
+                    <div class="step-item xtop">
+                        <span class="icon pe-7s-note"></span>
+                        <h6>Creative Direction & Consulting</h6>
+                    </div>
+                </div>
+                <div class="col-lg-4 wow fadeInUp" data-wow-delay=".6s">
+                    <div class="step-item xcolor">
+                        <span class="icon pe-7s-video"></span>
+                        <h6>Ad Films & Product Commercials</h6>
+                    </div>
+                </div>
+                <div class="col-lg-4 wow fadeInUp" data-wow-delay=".9s">
+                    <div class="step-item xbottom">
+                        <span class="icon pe-7s-chat"></span>
+                        <h6>Influencer Marketing & Collaborations</h6>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 wow fadeInUp" data-wow-delay=".3s">
+                    <div class="step-item xtop">
+                        <span class="icon pe-7s-help2"></span>
+                        <h6>Event Aftermovies & Highlights</h6>
+                    </div>
+                </div>
+                <div class="col-lg-4 wow fadeInUp" data-wow-delay=".6s">
+                    <div class="step-item xcolor">
+                        <span class="icon pe-7s-monitor"></span>
+                        <h6>Brand Identity & Design</h6>
+                    </div>
+                </div>
+                <div class="col-lg-4 wow fadeInUp" data-wow-delay=".9s">
+                    <div class="step-item xbottom">
+                        <span class="icon pe-7s-speaker"></span>
+                        <h6>Lifestyle & Fashion Campaigns</h6>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 wow fadeInUp" data-wow-delay=".3s">
+                    <div class="step-item xtop">
+                        <span class="icon pe-7s-note2"></span>
+                        <h6>Commercial Campaigns </h6>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- ==================== End Services ==================== -->
 
     <!-- ==================== End Services ==================== -->
 
@@ -383,7 +462,7 @@
                                         </div>
                                         <div class="cont">
                                             <div class="author">
-                                                <h6 class="author-name custom-font">Alex Regelman</h6>
+                                                <h6 class="author-name ">Alex Regelman</h6>
                                                 <span class="author-details">Co-founder, Colabrio</span>
                                             </div>
                                         </div>
@@ -401,7 +480,7 @@
                                         </div>
                                         <div class="cont">
                                             <div class="author">
-                                                <h6 class="author-name custom-font">Alex Regelman</h6>
+                                                <h6 class="author-name ">Alex Regelman</h6>
                                                 <span class="author-details">Co-founder, Colabrio</span>
                                             </div>
                                         </div>
@@ -419,7 +498,7 @@
                                         </div>
                                         <div class="cont">
                                             <div class="author">
-                                                <h6 class="author-name custom-font">Alex Regelman</h6>
+                                                <h6 class="author-name ">Alex Regelman</h6>
                                                 <span class="author-details">Co-founder, Colabrio</span>
                                             </div>
                                         </div>
@@ -448,7 +527,7 @@
                             <div class="col-md-6">
                                 <div class="item wow fadeInLeft" data-wow-delay=".6">
                                     <div class="skill" data-value="0.9">
-                                        <span class="custom-font">90%</span>
+                                        <span class="">90%</span>
                                     </div>
                                     <div class="cont">
                                         <span>Strategy</span>
@@ -459,7 +538,7 @@
                             <div class="col-md-6">
                                 <div class="item wow fadeInLeft" data-wow-delay=".3">
                                     <div class="skill" data-value="0.75">
-                                        <span class="custom-font">75%</span>
+                                        <span class="">75%</span>
                                     </div>
                                     <div class="cont">
                                         <span>Marketing</span>
@@ -482,9 +561,9 @@
 
     <section id="works" class="portfolio section-padding pb-70">
         <div class="container">
-            <div class="sec-head custom-font">
-                <h6>Portfolio</h6>
-                <h3>Our Works.</h3>
+            <div class="sec-head ">
+                <h6>Our Works.</h6>
+                <h3>Portfolio</h3>
                 <span class="tbg text-right">Portfolio</span>
             </div>
         </div>
@@ -604,7 +683,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 valign">
-                    <div class="sec-head custom-font mb-0">
+                    <div class="sec-head  mb-0">
                         <h6>Clients</h6>
                         <h3>Our <br> Clients.</h3>
                     </div>
@@ -697,7 +776,7 @@
                 <div class="col-md-8 col-lg-9">
                     <div class="content sm-mb30">
                         <h6 class="wow" data-splitting="">Let’s Talk</h6>
-                        <h2 class="wow custom-font" data-splitting="">about your <b>marketing goals</b>.</h2>
+                        <h2 class="wow " data-splitting="">about your <b>marketing goals</b>.</h2>
                     </div>
                 </div>
 
@@ -725,7 +804,7 @@
                                 <img src="img/logo-dark.png" alt="">
                             </a>
                         </div>
-                        <div class="con-info custom-font">
+                        <div class="con-info ">
                             <ul>
                                 <li><span>Email : </span> Avo_support@website.com</li>
                                 <li><span>Address : </span> A32 , Ave 15th Street, Door 211, San Franciso, USA 32490.
@@ -734,7 +813,7 @@
                             </ul>
                         </div>
                         <div class="social-icon">
-                            <h6 class="custom-font stit simple-btn">Follow Us</h6>
+                            <h6 class=" stit simple-btn">Follow Us</h6>
                             <div class="social">
                                 <a href="#0" class="icon">
                                     <i class="fab fa-facebook-f"></i>
@@ -754,17 +833,17 @@
                 </div>
                 <div class="col-lg-5 offset-lg-2">
                     <div class="subscribe mb-50">
-                        <h6 class="custom-font stit simple-btn">Newslatter</h6>
+                        <h6 class=" stit simple-btn">Newslatter</h6>
                         <p>Sign up for subscribe out newsletter!</p>
                         <form>
-                            <div class="form-group custom-font">
+                            <div class="form-group ">
                                 <input type="email" name="subscribe" placeholder="Your Email">
                                 <button class="cursor-pointer">Subscribe</button>
                             </div>
                         </form>
                     </div>
                     <div class="insta">
-                        <h6 class="custom-font stit simple-btn">Instagram Post</h6>
+                        <h6 class=" stit simple-btn">Instagram Post</h6>
                         <div class="insta-gallary">
                             <a href="#0">
                                 <img src="img/insta/1.jpg" alt="">
