--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <header id="#" class="slider slider-prlx">
         <div class="swiper-container parallax-slider">
             <div class="swiper-wrapper">
-                <div class="swiper-slide">
+                <div class="swiper-slide" data-swiper-autoplay="20000">
                     <div class="bg-img valign" data-overlay-dark="6">
                         <video width="100%" autoplay muted loop class="video-bg">
                             <source src="/img/banner.mp4" type="video/mp4" />
