--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="">
 
     <!-- Title  -->
-    <title>Digit</title>
+    <title>CVSQ</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico">
@@ -132,7 +132,66 @@
                         </video>
                     </div>
                 </div>
+                <div class="swiper-slide">
+                    <div class="bg-img valign" data-background="/img/program1.png" data-overlay-dark="6">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="caption dig">
+                                        <!-- <h1 data-splitting="">Creative <div class="tline">Marketing Strategies</div>
+                                        </h1> -->
+                                        <!-- <a href="#0" class="simple-btn mt-50">
+                                            <span>Explore Our Work</span>
+                                        </a> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="bg-img valign" data-background="/img/program2.png" data-overlay-dark="6">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="caption dig">
+                                        <!-- <h1 data-splitting="">Innovative <div class="tline">Digital Solutions</div>
+                                        </h1> -->
+                                        <!-- <a href="#0" class="simple-btn mt-50"><span>Explore Our Work</span></a> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="swiper-slide">
+                    <div class="bg-img valign" data-background="/img/program3.png" data-overlay-dark="6">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="caption dig">
+                                        <!-- <h1 data-splitting="">Award-Winning <div class="tline">Campaign Results</div>
+                                        </h1> -->
+                                        <!-- <a href="#0" class="simple-btn mt-50"><span>Explore Our Work</span></a> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+            <!-- slider setting -->
+            <div class="setone setwo">
+                <div class="swiper-button-next swiper-nav-ctrl next-ctrl cursor-pointer">
+                    <i class="fas fa-chevron-right"></i>
+                </div>
+                <div class="swiper-button-prev swiper-nav-ctrl prev-ctrl cursor-pointer">
+                    <i class="fas fa-chevron-left"></i>
+                </div>
+            </div>
+
             <div class="swiper-pagination top botm "></div>
 
             <div class="social-icon">
@@ -168,7 +227,7 @@
                 </div>
                 <div class="col-lg-5 valign">
                     <div class="full-width">
-                        <p class="wow txt" data-splitting="">
+                        <p class="wow txt about-text" data-splitting="">
                             Back in 2021, a few of us in our early 20’s, young, ambitious, and passionate about
                             creating, Decided to stop waiting for the “right time” and just start. LA Creatives was born
                             as our entry into concerts and event media production. We built our reputation through
@@ -281,7 +340,7 @@
     </section>
 
     <!-- ==================== Start Services ==================== -->
-
+<!-- 
     <section class="services section-padding sub-bg">
         <div class="container">
             <div class="sec-head custom-font tr-head">
@@ -337,7 +396,7 @@
             </div>
 
         </div>
-    </section>
+    </section> -->
 
     <!-- ==================== End Services ==================== -->
 
@@ -524,7 +583,7 @@
                 </div>
             </div>
             <div class="copyrights text-center">
-                <p>© 2020, Avo Template. Made with passion by <a href="#0">UI-ThemeZ</a>.</p>
+                <p>© 2025, THE CREATIVE SOUQ LLC. Made with passion by <a href="#0">Hash Tec Global</a>.</p>
             </div>
         </div>
     </footer>
