add contact,change servicews

--- a/index.html
+++ b/index.html
@@ -96,10 +96,6 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#works">Showcases</a>
-                    </li>
-
-                    <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -138,11 +134,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="caption dig">
-                                        <!-- <h1 data-splitting="">Creative <div class="tline">Marketing Strategies</div>
-                                        </h1> -->
-                                        <!-- <a href="#0" class="simple-btn mt-50">
-                                            <span>Explore Our Work</span>
-                                        </a> -->
+                                        <h1 data-splitting="">Creative <div class="tline">Marketing Strategies</div>
+                                        </h1>
+                                        <a href="#about" class="simple-btn mt-50"><span>Know more</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -155,9 +149,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="caption dig">
-                                        <!-- <h1 data-splitting="">Innovative <div class="tline">Digital Solutions</div>
-                                        </h1> -->
-                                        <!-- <a href="#0" class="simple-btn mt-50"><span>Explore Our Work</span></a> -->
+                                        <h1 data-splitting="">Innovative <div class="tline">Digital Solutions</div>
+                                        </h1>
+                                        <a href="#about" class="simple-btn mt-50"><span>Know more</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -171,9 +165,9 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="caption dig">
-                                        <!-- <h1 data-splitting="">Award-Winning <div class="tline">Campaign Results</div>
-                                        </h1> -->
-                                        <!-- <a href="#0" class="simple-btn mt-50"><span>Explore Our Work</span></a> -->
+                                        <h1 data-splitting="">Award-Winning <div class="tline">Campaign Results</div>
+                                        </h1>
+                                        <a href="#about" class="simple-btn mt-50"><span>Know more</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -195,10 +189,9 @@
             <div class="swiper-pagination top botm "></div>
 
             <div class="social-icon">
-                <a href="#0"><i class="fab fa-facebook-f"></i></a>
-                <a href="#0"><i class="fab fa-twitter"></i></a>
-                <a href="#0"><i class="fab fa-behance"></i></a>
-                <a href="#0"><i class="fab fa-pinterest-p"></i></a>
+                <a href="https://www.instagram.com/thecreativesouq?igsh=YmpoYTB2MDF2ZnBj"><i
+                        class="fab fa-instagram"></i></a>
+                <a href="https://wa.me/971585769293"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
     </header>
@@ -209,7 +202,7 @@
 
     <!-- ==================== Start blc-sec ==================== -->
 
-    <section id="about" class="blc-sec section-padding pb-0">
+    <section id="about" class="blc-sec section-padding pb-8">
         <div class="container">
             <div class="row">
                 <div class="col-lg-7">
@@ -255,14 +248,12 @@
 
     <!-- ==================== Start Services ==================== -->
 
-    <section id="services" class="services services-padding">
+    <!-- <section id="services" class="services services-padding">
         <div class="container">
             <div class="row rone">
                 <div class="col-lg-3 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
                         <span class="icon pe-7s-photo"></span>
-                        <!-- <img class="png-image" src="./img/content.png" alt=""> -->
-
                         <h6>Brand <br> Photography & Videography</h6>
                         <div class="text-right">
                             <a href="#0" class="more"><i class="fas fa-chevron-right"></i></a>
@@ -285,7 +276,6 @@
                 </div>
                 <div class="col-lg-3 offset-lg-1 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
-                        <!-- <img class="png-image" src="./img/tiktok.png" alt=""> -->
                         <span class="icon pe-7s-film"></span>
 
                         <h6>Reels &
@@ -302,7 +292,6 @@
                 <div class="col-lg-3 offset-lg-1 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
                         <span class="icon pe-7s-box1"></span>
-                        <!-- <span class="icon pe-7s-diskette"></span> -->
                         <h6>Food &
                             <br>Beverage Media
                         </h6>
@@ -325,7 +314,6 @@
                 </div>
                 <div class="col-lg-3 offset-lg-1 wow fadeInUp" data-wow-delay=".4s">
                     <div class="mas-item">
-                        <!-- <span class="icon pe-7s-arc"></span> -->
                         <span class="icon pe-7s-camera"></span>
 
                         <h6>Wedding & <br> Event Coverage</h6>
@@ -337,10 +325,71 @@
                 </div>
             </div>
         </div>
+    </section> -->
+
+
+    <!-- ==================== start temp Services ==================== -->
+
+    <section id="services" class="services section-padding sub-bg">
+        <div class="container">
+            <div class="sec-head custom-font tr-head">
+                <h6>Best Features</h6>
+                <h3>Services.</h3>
+                <span class="tbg">Services</span>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 wow fadeInUp" data-wow-delay=".3s">
+                    <div class="step-item xtop">
+                        <span class="icon pe-7s-photo"></span>
+                        <h6>Brand Photography & Videography</h6>
+                    </div>
+                </div>
+                <div class="col-lg-4 wow fadeInUp" data-wow-delay=".6s">
+                    <div class="step-item xcolor">
+                        <span class="icon pe-7s-users"></span>
+                        <!-- <img class="png-image-icon" src="./img/instagram.png" alt=""> -->
+
+                        <h6>Social Media Content & Management
+                        </h6>
+                    </div>
+                </div>
+                <div class="col-lg-4 wow fadeInUp" data-wow-delay=".9s">
+                    <div class="step-item xbottom">
+                        <span class="icon pe-7s-film"></span>
+                        <h6>Reels & Short-Form Content
+                        </h6>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 wow fadeInUp" data-wow-delay=".3s">
+                    <div class="step-item xtop">
+                        <span class="icon pe-7s-box1"></span>
+                        <h6>Food & Beverage Media</h6>
+                    </div>
+                </div>
+                <div class="col-lg-4 wow fadeInUp" data-wow-delay=".6s">
+                    <div class="step-item xcolor">
+                        <span class="icon pe-7s-display1"></span>
+                        <h6>Automotive <br> Visuals</h6>
+                    </div>
+                </div>
+                <div class="col-lg-4 wow fadeInUp" data-wow-delay=".9s">
+                    <div class="step-item xbottom">
+                        <span class="icon pe-7s-camera"></span>
+                        <h6>Wedding & Event Coverage</h6>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </section>
 
+    <!-- ==================== end temp Services ==================== -->
+
+
+
     <!-- ==================== Start Services ==================== -->
-<!-- 
+    <!-- 
     <section class="services section-padding sub-bg">
         <div class="container">
             <div class="sec-head custom-font tr-head">
@@ -403,7 +452,7 @@
 
     <!-- ==================== Start clients Brands ==================== -->
 
-    <section class="clients section-padding sub-bg">
+    <section class="clients section-padding ">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 valign">
@@ -494,7 +543,7 @@
 
     <!-- ==================== Start call-to-action ==================== -->
 
-    <section class="call-action section-padding bg-img" data-background="img/pattern.png">
+    <section class="call-action section-padding bg-img sub-bg" data-background="img/pattern.png">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-lg-9">
@@ -505,7 +554,7 @@
                 </div>
 
                 <div class="col-md-4 col-lg-3 valign">
-                    <a href="contact.html" class="btn-curve btn-lit"><span>Get In Touch</span></a>
+                    <a href="#contact" class="btn-curve btn-lit"><span>Get In Touch</span></a>
                 </div>
 
             </div>
@@ -530,42 +579,30 @@
                         </div>
                         <div class="con-info ">
                             <ul>
-                                <li><span>Email : </span> Avo_support@website.com</li>
-                                <li><span>Address : </span> A32 , Ave 15th Street, Door 211, San Franciso, USA 32490.
+                                <li><span>Email : </span>Thecreativesouq@gmail.com</li>
+                                <li><span>Address : </span>Al Messaned, Al Mtsannid Suburb, Sharjah - United Arab
+                                    Emirates A32.
                                 </li>
-                                <li><span>Phone : </span> (+1) 2345 678 44 88</li>
+                                <li><span>Phone : </span> (+971) 58 576 9293 </li>
                             </ul>
                         </div>
                         <div class="social-icon">
                             <h6 class=" stit simple-btn">Follow Us</h6>
                             <div class="social">
-                                <a href="#0" class="icon">
-                                    <i class="fab fa-facebook-f"></i>
+
+                                <a href="https://www.instagram.com/thecreativesouq?igsh=YmpoYTB2MDF2ZnBj" class="icon">
+                                    <i class="fab fa-instagram"></i>
                                 </a>
-                                <a href="#0" class="icon">
-                                    <i class="fab fa-twitter"></i>
+                                <a href="https://wa.me/971585769293" class="icon">
+                                    <i class="fab fa-whatsapp"></i>
                                 </a>
-                                <a href="#0" class="icon">
-                                    <i class="fab fa-pinterest"></i>
-                                </a>
-                                <a href="#0" class="icon">
-                                    <i class="fab fa-behance"></i>
-                                </a>
+
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-5 offset-lg-2">
-                    <div class="subscribe mb-50">
-                        <h6 class=" stit simple-btn">Newslatter</h6>
-                        <p>Sign up for subscribe out newsletter!</p>
-                        <form>
-                            <div class="form-group ">
-                                <input type="email" name="subscribe" placeholder="Your Email">
-                                <button class="cursor-pointer">Subscribe</button>
-                            </div>
-                        </form>
-                    </div>
+
                     <div class="insta">
                         <h6 class=" stit simple-btn">Instagram Post</h6>
                         <div class="insta-gallary">
